Major refactoring of packages

--- a/pdfapilot-client/src/test/resources/alfresco-global.properties
+++ b/pdfapilot-client/src/test/resources/alfresco-global.properties
@@ -7,3 +7,5 @@ pdfapilot.exe = pdfaPilot
 pdfapilot.enabled = true
 
 pdfapilot.endpoint.port = 1600
+
+pdfapilot.serverUrl=http://pdfapilot2.vgregion.se:8080
