--- a/pdfapilot-client/pom.xml
+++ b/pdfapilot-client/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>com.redpill-linpro.alfresco</groupId>
     <artifactId>alfresco-base</artifactId>
-    <version>1.1.1.7</version>
+    <version>1.1.1.14</version>
   </parent>
 
   <groupId>org.redpill.pdfapilot.client</groupId>
@@ -80,13 +80,13 @@
     <dependency>
       <groupId>org.redpill-linpro.alfresco.module</groupId>
       <artifactId>metadatawriter</artifactId>
-      <version>4.2.6</version>
+      <version>4.2.7</version>
     </dependency>
 
     <dependency>
       <groupId>org.redpill-linpro.alfresco</groupId>
       <artifactId>alfresco-test-repo</artifactId>
-      <version>1.0.5</version>
+      <version>1.0.10</version>
       <scope>test</scope>
     </dependency>
 
@@ -95,6 +95,14 @@
       <artifactId>spring-core</artifactId>
       <version>3.0.5.RELEASE</version>
       <scope>provided</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>javax.ejb</groupId>
+      <artifactId>ejb-api</artifactId>
+      <version>3.0</version>
+      <scope>compile</scope>
+      <optional>true</optional>
     </dependency>
   </dependencies>
 
@@ -112,19 +120,6 @@
         <filtering>false</filtering>
       </testResource>
     </testResources>
-
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <configuration>
-          <source>1.7</source>
-          <target>1.7</target>
-          <compilerVersion>1.7</compilerVersion>
-          <fork>true</fork>
-        </configuration>
-      </plugin>
-    </plugins>
   </build>
 
   <profiles>
@@ -167,7 +162,7 @@
   <repositories>
     <repository>
       <id>redpill-linpro</id>
-      <url>http://maven.redpill-linpro.com/nexus/content/groups/public</url>
+      <url>https://maven.redpill-linpro.com/nexus/content/groups/public</url>
       <snapshots>
         <enabled>true</enabled>
         <updatePolicy>daily</updatePolicy>
