Fixed so that thumbnails can be created

--- a/pdfapilot-client/src/test/resources/alfresco-global.properties
+++ b/pdfapilot-client/src/test/resources/alfresco-global.properties
@@ -9,3 +9,5 @@ pdfapilot.enabled = true
 pdfapilot.endpoint.port = 1600
 
 pdfapilot.serverUrl=http://pdfapilot2.vgregion.se:8080
+
+img.exe=/usr/local/bin/convert
