--- a/pdfapilot-client/pom.xml
+++ b/pdfapilot-client/pom.xml
@@ -11,7 +11,7 @@
 
   <groupId>org.redpill.pdfapilot.client</groupId>
   <artifactId>pdfapilot-client</artifactId>
-  <version>1.1.0</version>
+  <version>1.1.1-SNAPSHOT</version>
 
   <name>pdfaPilot client</name>
   <description>This is a transformer implementation as a subsystem of pdfaPilot run as a dispatcher.</description>
