increased default max file size to 100 MB

--- a/pdfapilot-promus/src/main/resources/config/application.yml
+++ b/pdfapilot-promus/src/main/resources/config/application.yml
@@ -60,4 +60,7 @@ pdfaPilot:
     exe: /usr/local/bin/pdfaPilot
     node: ppp-001
     endpoint:
+
+multipart:
+    maxFileSize: 100MB
 # custom config end
