--- a/pdfapilot-client/src/test/resources/log4j.properties
+++ b/pdfapilot-client/src/test/resources/log4j.properties
@@ -13,8 +13,8 @@ log4j.appender.Console.layout.ConversionPattern=%d{ABSOLUTE} %-5p [%c] %m%n
 
 log4j.logger.org.apache.commons.httpclient=warn
 
-log4j.logger.org.redpill=TRACE
-log4j.logger.org.alfresco.repo.content.transform=debug
+log4j.logger.org.redpill=DEBUG
+# log4j.logger.org.alfresco.repo.content.transform=debug
 # log4j.logger.org.apache.pdfbox=TRACE
 # log4j.logger.com.lowagie=TRACE
 # log4j.logger.org.alfresco.repo.management.subsystems=debug
