Disabled some services during test

--- a/pdfapilot-client/src/test/resources/alfresco-global.properties
+++ b/pdfapilot-client/src/test/resources/alfresco-global.properties
@@ -11,3 +11,14 @@ pdfapilot.endpoint.port = 1600
 pdfapilot.serverUrl=http://pdfapilot2.vgregion.se:8080
 
 img.exe=/usr/local/bin/convert
+
+avm.rmi.service.enabled=false
+avmsync.rmi.service.enabled=false
+authentication.rmi.service.enabled=false
+repo.rmi.service.enabled=false
+action.rmi.service.enabled=false
+deployment.rmi.service.enabled=false
+monitor.rmi.service.enabled=false
+
+email.server.enabled=false
+email.inbound.enabled=false
