--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
   <groupId>org.redpill-linpro.pdfapilot</groupId>
   <artifactId>pdfapilot-parent</artifactId>
-  <version>1.1.3-SNAPSHOT</version>
+  <version>1.1.3</version>
   <packaging>pom</packaging>
 
   <name>pdfaPilot promus (server) and client</name>
