Fixed so that size limits for transformation are now correct

--- a/pdfapilot-client/src/main/resources/alfresco-global.properties
+++ b/pdfapilot-client/src/main/resources/alfresco-global.properties
@@ -20,8 +20,7 @@ content.transformer.complex.pdfaPilot.Image.priority=50
 content.transformer.complex.pdfaPilot.PdfBox.pipeline=pdfaPilot|pdf|PdfBox
 content.transformer.complex.pdfaPilot.Pdf2swf.pipeline=pdfaPilot|pdf|Pdf2swf
 
-#File size limits for different file types when doing metadata extraction
-content.extracter.pdfaPilot.extensions.default.maxSourceSizeKBytes=102400
-content.extracter.pdfaPilot.extensions.xlsx.maxSourceSizeKBytes=10240
-content.extracter.pdfaPilot.extensions.xls.maxSourceSizeKBytes=10240
-content.extracter.pdfaPilot.extensions.xlsm.maxSourceSizeKBytes=10240
+# File size limits for different file types when doing metadata transformation
+content.transformer.pdfaPilot.extensions.xlsx.pdf.maxSourceSizeKBytes=1024
+content.transformer.pdfaPilot.extensions.xls.pdf.maxSourceSizeKBytes=10240
+content.transformer.pdfaPilot.extensions.xlsm.pdf.maxSourceSizeKBytes=1024
