Added the possibility to disable metadata writing by configuration
Fixes

--- a/pdfapilot-client/src/test/resources/alfresco-global.properties
+++ b/pdfapilot-client/src/test/resources/alfresco-global.properties
@@ -22,3 +22,6 @@ monitor.rmi.service.enabled=false
 
 email.server.enabled=false
 email.inbound.enabled=false
+
+pdfapilot.metadatawriter.enabled=true
+
