--- a/pdfapilot-client/pom.xml
+++ b/pdfapilot-client/pom.xml
@@ -80,7 +80,7 @@
     <dependency>
       <groupId>org.redpill-linpro.alfresco.module</groupId>
       <artifactId>metadatawriter</artifactId>
-      <version>4.2.9</version>
+      <version>4.2.13-SNAPSHOT</version>
     </dependency>
 
     <dependency>
