--- a/pdfapilot-client/src/main/resources/alfresco-global.properties
+++ b/pdfapilot-client/src/main/resources/alfresco-global.properties
@@ -24,3 +24,5 @@ content.transformer.complex.pdfaPilot.Pdf2swf.pipeline=pdfaPilot|pdf|Pdf2swf
 content.transformer.pdfaPilot.extensions.xlsx.pdf.maxSourceSizeKBytes=1024
 content.transformer.pdfaPilot.extensions.xls.pdf.maxSourceSizeKBytes=10240
 content.transformer.pdfaPilot.extensions.xlsm.pdf.maxSourceSizeKBytes=1024
+
+pdfapilot.metadatawriter.enabled=true
