Added the possibility to specify a different temp folder for transformations than the system temp folder. Added start & build scripts and begun writing documentation.

--- a/pdfapilot-promus/src/main/resources/config/application.yml
+++ b/pdfapilot-promus/src/main/resources/config/application.yml
@@ -60,6 +60,7 @@ pdfaPilot:
     exe: /usr/local/bin/pdfaPilot
     node: ppp-001
     endpoint:
+    documentsTempFolder:
 
 multipart:
     maxFileSize: 100MB
