--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
   <name>pdfaPilot promus (server) and client</name>
   <description>This project implements a client and a server for callas pdfaPilot.</description>
-  <url>https://github.com/oakman/pdfa-pilot</url>
+  <url>https://github.com/Redpill-Linpro/pdfapilot</url>
 
   <developers>
     <developer>
@@ -25,17 +25,27 @@
         <role>Software Architect</role>
       </roles>
     </developer>
+    <developer>
+      <id>mars</id>
+      <name>Marcus Svartmark</name>
+      <email>marcus.svartmark@redpill-linpro.com</email>
+      <organization>Redpill Linpro</organization>
+      <organizationUrl>http://www.redpill-linpro.com</organizationUrl>
+      <roles>
+        <role>Developer</role>
+      </roles>
+    </developer>
   </developers>
 
   <scm>
-    <connection>scm:git:https://github.com/oakman/pdfa-pilot.git</connection>
-    <developerConnection>scm:git:https://github.com/oakman/pdfa-pilot.git</developerConnection>
-    <url>https://github.com/oakman/pdfa-pilot</url>
+    <connection>scm:git:https://github.com/Redpill-Linpro/pdfapilot.git</connection>
+    <developerConnection>scm:git:https://github.com/Redpill-Linpro/pdfapilot.git</developerConnection>
+    <url>https://github.com/Redpill-Linpro/pdfapilot</url>
   </scm>
 
   <issueManagement>
     <system>GitHub</system>
-    <url>https://github.com/oakman/pdfa-pilot/issues</url>
+    <url>https://github.com/Redpill-Linpro/pdfapilot/issues</url>
   </issueManagement>
 
   <modules>
