--- a/pdfapilot-client/pom.xml
+++ b/pdfapilot-client/pom.xml
@@ -80,7 +80,7 @@
     <dependency>
       <groupId>org.redpill-linpro.alfresco.module</groupId>
       <artifactId>metadatawriter</artifactId>
-      <version>4.2.13-SNAPSHOT</version>
+      <version>4.2.13</version>
     </dependency>
 
     <dependency>
@@ -120,6 +120,17 @@
         <filtering>false</filtering>
       </testResource>
     </testResources>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.5</version>
+        <configuration>
+          <source>1.7</source>
+          <target>1.7</target>
+        </configuration>
+      </plugin>
+    </plugins>
   </build>
 
   <profiles>
@@ -151,6 +162,9 @@
                 <goals>
                   <goal>jar</goal>
                 </goals>
+                <configuration>
+                  <additionalparam>-Xdoclint:none</additionalparam>
+                </configuration>
               </execution>
             </executions>
           </plugin>
