--- a/pdfapilot-promus/pom.xml
+++ b/pdfapilot-promus/pom.xml
@@ -11,7 +11,7 @@
 
     <groupId>org.redpill.pdfapilot.promus</groupId>
     <artifactId>pdfapilot-promus</artifactId>
-    <version>1.1.4</version>
+    <version>1.2.0-SNAPSHOT</version>
     <packaging>war</packaging>
 
     <name>pdfaPilot Promus</name>
