Added option to disable pdfapilotclient

--- a/pdfapilot-client/src/main/resources/alfresco/subsystems/pdfaPilot/default/pdfapilot.properties
+++ b/pdfapilot-client/src/main/resources/alfresco/subsystems/pdfaPilot/default/pdfapilot.properties
@@ -10,6 +10,9 @@ pdfapilot.exe = /usr/local/bin/pdfaPilot
 # let pdfaPilot be enabled by default
 pdfapilot.enabled = false
 
+# let pdfaPilot client be enabled by default
+pdfapilot.client.enabled = false
+
 pdfapilot.transformationTimeout=300
 
 pdfapilot.maxConcurrentConnections=10
